# cpp-sdl2-image-viewer

./: .gitignore  CMakeLists.txt  ColdEventDispatcher.h  Observable.h  README.md  ScreenEvent.h  basic_sdl.cpp  basic_sdl.h  coldviewer.sln  coldviewer.vcxproj  coldviewer.vcxproj.filters  define.h  event.cpp  event.h  gui.cpp  gui.h  main.cpp  resource.h
src/: Core.cpp  Gui.cpp  Image.cpp  Input.cpp  Window.cpp  basic_sdl.cpp  event.cpp  gui.cpp  main.cpp  texture.cpp
src/hdr/: ColdEventDispatcher.h  Core.h  Gui.h  Image.h  Input.h  Observable.h  Observer.h  ScreenEvent.h  Window.h  basic_sdl.h  define.h  event.h  gui.h  texture.h
